<resources>
    <string name="action_settings">Settings</string>
    <string name="achievement">達成数:</string>
    <string name="apply">決定</string>
    <string name="cancel">元に戻す</string>
    <string name="newItem">新しいアイテム</string>
    <string name="filterCondition">表示条件</string>
    <string name="undefinedDate">----/--/--</string>
    <string name="date_format">%1$d/%2$d/%3$d</string>

    <string name="enterNewItem">新しいアイテムを入力</string>
    <string name="please_enter">%1$を入力して下さい</string>
    <string name="enter_Tag">タグを入力して下さい</string>
    <string name="enter_preceding_item">先行するアイテムを入力ください</string>
    <string name="enter_succeeding_item">この次のアイテムを入力ください</string>
    <string name="action_movetoMainActivity">リストへ戻ります｡</string>
    <string name="getPoint">完了クリアし達成確認</string>
    <string name="item_preceding">先行アイテム</string>
    <string name="item_succeeding">後続アイテム</string>
    <string name="menu_start_dropbox">アイテムをDROPBOXで共有</string>
    <string name="merge">マージ</string>
    <string name="overwrite">上書き</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="showOnlyFirstItem">最初に行うアクションのみ表示</string>
    <string name="saveItem">現在のアイテムを保存</string>
    <string name="saveItem_ToSdCard">アイテムをSDカードに書き込み</string>
    <string name="status_canConnect">DROPBOXファイル操作が可能です。</string>

    <string name="loadItem">アイテムの読込み</string>
    <string name="loadItem_FromSdCard">アイテムをSDカードから読込み</string>
    <string name="uploadItems_ToDropBox">アイテムをDropBoxにアップロード</string>
    <string name="downloadItems_FromDropBox">アイテムをDropBoxからダウンロード</string>
    <string name="deleteFile">保存したアイテムのクリア</string>
    <string name="press_login">ボタンを押すとDropboxログイン画面に遷移します</string>>
    <string name="press_start_connection">行う処理を押してください</string>
    <string name="setting_visible_item">表示アイテムの設定</string>
    <string name="status_login">%1$sでログイン中</string>
    <string name="status_not_login">未ログイン</string>
    <string name="status_complete_download">%1$sのダウンロード完了</string>
    <string name="status_complete_upload">%1$sアップロード完了</string>
    <string name="status_complete_merge">%1$sマージ完了</string>
    <string name="status_start_download">ダウンロードを始めます</string>
    <string name="status_start_upload">アップロードを始めます</string>
    <string name="status_start_merge">マージを始めます</string>
    <string name="status_file_not_found">ファイル%1$sが見つかりません。</string>
    <string name="status_error_on_upload">アップロード時に%1$sが発生しました。</string>
    <string name="status_existOrNot">クラウド上にファイルが存在するかどうか確かめています</string>
    <string name="tilda">～</string>

    <string name="DROPBOX_APP_KEY">obxt63d1h0c2d3e</string>
    <string name="DROPBOX_APP_SECRET">dktusfcbh5rxd9r</string>
    <string name="sign_in">Sign in to DropBox</string>

    <string-array name="default_todoItem_title">
        <item>個人番号カード市役所に提出</item>
        <item>不動産収支まとめ続き</item>
        <item>子供部屋のコンテナ注文</item>
        <item>HDD処理</item>
        <item>第108回消化器内視鏡学会関東支部例会ハンズオン</item>
        <item>第6回大腸ESD ハンズオンセミナー in 北陸</item>
        <item>ロジェフレア関連入出金</item>
        <item>年賀状整理</item>
        <item>サドルバック</item>
        <item>幅13cmのちりとり</item>
        <item>ロングモニターアーム</item>
    </string-array>
    <string-array name="default_todoItem_tag">
        <item>書類提出</item>
        <item>財務</item>
        <item>整理</item>
        <item>整理</item>
        <item>学会</item>
        <item>学会</item>
        <item>整理</item>
        <item>挨拶</item>
        <item>購入検討</item>
        <item>購入検討</item>
        <item>購入検討</item>
    </string-array>
    <string-array name="menu_items">
        <item>make item default</item>
        <item>save current item</item>
    </string-array>
</resources>