<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/clearDone_and_getReward"
        android:title="@string/getPoint" />
    <item
        android:id="@+id/action_saveItem"
        android:title="@string/saveItem" />
    <item
        android:id="@+id/action_loadItem"
        android:title="@string/loadItem" />
    <item
        android:id="@+id/action_loadItem_FromSdCard"
        android:title="@string/loadItem_FromSdCard" />
    <item
        android:id="@+id/action_saveItem_ToSdCard"
        android:title="@string/saveItem_ToSdCard" />
    <item
        android:id="@+id/action_uploadItems_ToDropBox"
        android:title="@string/uploadItems_ToDropBox" />
    <item
        android:id="@+id/action_downloadItems_FromDropBox"
        android:title="@string/downloadItems_FromDropBox" />
    <item
        android:id="@+id/action_deleteFile"
        android:title="@string/deleteFile" />


</menu>
