<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Button
        style="@style/nonSpecific_text28"
        android:id="@+id/sign_in_button"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="@id/login_guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/nonSpecific_text18"
        android:id="@+id/status_login"
        android:text="@string/press_login"
        app:layout_constraintBottom_toTopOf="@+id/login_guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button"
        tools:Text="message about DROPBOX activity" />

    <androidx.constraintlayout.widget.Guideline
        style="@style/nonspecific_row"
        android:id="@+id/login_guideline1"
        app:layout_constraintGuide_begin="230dp" />

    <Button
        style="@style/nonSpecific_text18"
        android:id="@+id/upload_dropbox"
        android:text="@string/uploadItems_ToDropBox"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@id/download_dropbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/login_guideline1" />

    <Button
        style="@style/nonSpecific_text18"
        android:id="@+id/download_dropbox"
        android:enabled="false"
        android:text="@string/downloadItems_FromDropBox"
        app:layout_constraintBottom_toTopOf="@id/login_guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upload_dropbox" />

    <TextView
        style="@style/nonSpecific_text18"
        android:id="@+id/status_connection"
        android:text="@string/status_not_login"
        app:layout_constraintBottom_toBottomOf="@id/login_guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/download_dropbox" />

    <androidx.constraintlayout.widget.Guideline
        style="@style/nonspecific_row"
        android:id="@+id/login_guideline2"
        app:layout_constraintGuide_begin="460dp" />

    <Button
        style="@style/nonSpecific_text18"
        android:id="@+id/comeBack_MainActivity"
        android:text="@string/action_movetoMainActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>